[tool.poetry]
name = "neww3"
version = "0.1"
description = ""
authors = ["venthanx <760458594@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = "^3.9.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
